# AnnaDB

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  CNAME  Cargo.toml  Dockerfile  Dockerfile.test  LICENSE  LICENSE_AD  NOTICE  README.md  REFACTORING_PLAN.md  TEST_COVERAGE_TRACKER.md  THIRD_PARTY  index.html  models.toml  sitemap.xml
docs/: build.py  mkdocs.yml  publish.sh  pyproject.toml
docs/docs_gen/: article_native_tutorial.py  delete.py  find.py  get.py  insert.py  introduction.py  limit.py  main.py  native_tutorial.py  offset.py  project.py  publish_docs.sh  pyproject.toml  sort.py  update.py
docs/docs_gen/release_notes/: notes_0_2.py
docs/docs_gen/templates/articles/: first.md
docs/docs_gen/templates/documentation/: delete.md  find.md  get.md  insert.md  introduction.md  limit.md  offset.md  project.md  sort.md  update.md
docs/docs_gen/templates/release_notes/: 0.2.0.md
docs/docs_gen/templates/tutorial/native/: index.md
drivers/python/: README.md  pyproject.toml
drivers/python/annadb/: __init__.py  collection.py  connection.py  console.py  constants.py  dump.py  exceptions.py  response.py  transaction.py
drivers/python/annadb/data_types/: constants.py  journal.py  map.py  modifier.py  pair.py  primitive.py  types_map.py  tyson.py  vector.py
drivers/python/annadb/query/: base.py  path.py  query_set.py  types.py
drivers/python/annadb/query/delete/: query.py
drivers/python/annadb/query/find/: operators.py  query.py
drivers/python/annadb/query/get/: query.py
drivers/python/annadb/query/insert/: query.py
drivers/python/annadb/query/limit/: query.py
drivers/python/annadb/query/offset/: query.py
drivers/python/annadb/query/sort/: operators.py  query.py
drivers/python/annadb/query/update/: operators.py  query.py
drivers/python/annadb/shell/: __init__.py
drivers/python/tests/: conftest.py  test_annadb.py  test_pyannadb.py
drivers/python/tests/e2e/: test_big_object.py  test_collection_name.py  test_find.py  test_get.py  test_insert.py  test_limit.py  test_multi_collection.py  test_offset.py  test_sort.py  test_transactions.py
drivers/python/tests/query/: test_delete.py  test_find.py  test_insert.py  test_limit.py  test_offset.py  test_sort.py  test_transactions.py  test_update.py
drivers/python/tests/serialization/: test_serialization.py
install/: index.html
roadmap/: index.html
scripts/: build_and_run.sh
search/: search_index.json
src/: config.rs  constants.rs  embedding.rs  errors.rs  lib.rs  main.rs  server.rs
src/data_types/: mod.rs  (+1 more)
tests/: integration.rs  pyproject.toml
(+142 files in other folders)
