[package]
name = "AnnaDB"
version = "0.1.0"
edition = "2021"

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
uuid = { version = "0.4", features = ["v4"] }
zmq = "0.9.2"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
vendored-zmq = ['zmq/vendored']