[package]
name = "AnnaDB"
version = "0.1.0"
edition = "2021"

[dependencies]
pest = "2.7"
pest_derive = "2.7"
uuid = { version = "1", features = ["v4"] }
zmq = "0.9.2"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
bincode = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
vendored-zmq = ['zmq/vendored']