[package]
name = "AnnaDB"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["bindings/python"]

[dependencies]
pest = "2.7"
pest_derive = "2.7"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
bincode = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
ureq = { version = "2", features = ["json"] }
serde_json = "1"
dirs-next = "2"

[features]
default = []
embedding-local = []