[tool.poetry]
name = "docs"
version = "0.1.0"
description = ""
authors = ["Roman <roman-right@protonmail.com>"]
readme = "README.md"
packages = [{include = "docs_gen"}]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
annadb = "^0.1.4"
Jinja2 = "^3.1.2"
mkdocs-material = ">=9.0"
pydoc-markdown = ">=4.6"
mkdocs = ">=1.4"
Markdown = ">=3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
