[tool.poetry]
name = "annadb"
version = "0.1.1"
description = "AnnaDB driver and shell"
authors = ["Roman Right <roman-right@protonmail.com>"]

readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pyzmq = "^23.1.0"
tyson = "^0.1.5"
textual = "^0.1.18"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = ">7"
black = "^22.6.0"
mkdocs-material = "^8.3.9"
pre-commit = "^2.20.0"
Jinja2 = "^3.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
annadb = "annadb.shell:shell"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
